home: hr light class, logo, fixed spacing

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -13,11 +13,17 @@ body {
 #main-content {
     text-align: center;
     color: white;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 #name {
-    padding-top: 25%;
-    font-weight: 500;
+    font-weight: 400;
     text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
         0px 8px 10px rgba(0, 0, 0, 0.7);
+}
+
+.light {
+    border: 1px solid white;
+    margin: 2.5rem 10rem 2.5rem 10rem;
 }
